in-RRchives-home.css
@font-face {
    font-family: inJob;
    src: url('./fonts/SpecialElite-Regular.ttf');
}

@font-face {
    font-family: montserrat-medium;
    src: url('./fonts/Montserrat-Medium.ttf');
}

@font-face {
    font-family: montserrat-semibold-italic;
    src: url('./fonts/Montserrat-SemiBoldItalic.ttf');
}

@font-face {
    font-family: montserrat-bold;
    src: url('./fonts/Montserrat-Bold.ttf');
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    overflow-y: auto;
    overflow-x: hidden;
    min-height: 100vh;
}

.page-background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: -1;
}

.theme-red {
    background-color: rgb(73, 0, 0);
}

.main-navigation-wrapper {
    display: flex;
    justify-content: center;
}

.main-navigation-bar {
    position: sticky;
    top: 0;
    z-index: 100; 
}

.main-nav-body { 
    width: 95vw;
    height: 13vh;
    margin: 4rem auto;
    border-radius: 0 25px 25px 25px;
    background: rgba(255, 255, 255, 1);
    border: 1px solid white;
    position: relative;
}

.main-nav-tab-1::before {
    content:  '';
    position: absolute;
    top: -18px;
    width: 300px;
    height: 17px;
    left: -1px;
    background: rgba(255,255,255); 
    border-radius: 25px 25px 0 0;
    clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
    z-index: 4;
}

.main-nav-tab-1::after {
    content: '';
    position: absolute;
    left: 45px;
    width: 85px;
    height: 7px;
    top: -18px;
    z-index: 4;
}

.main-nav-tab-2::before {
    content:  '';
    position: absolute;
    top: -18px;
    width: 300px;
    height: 17px;
    left: 130px;
    background: rgb(200,200,200, 0.3);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);
    border-radius: 25px 25px 0 0;
    clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
    z-index: 3;
}

.main-nav-tab-2::after {
    content: 'ACHIEVEMENTS';
    font-family: montserrat-semibold-italic;
    font-size: 13px;
    color: rgb(73, 0, 0);
    position: absolute;
    left: 185px;
    width: 85px;
    height: 7px;
    top: -18px;
    z-index: 3;
}

.main-nav-tab-3::before {
    content:  '';
    position: absolute;
    top: -18px;
    width: 300px;
    height: 17px;
    left: 260px;
    background: rgb(200,200,200,0.3);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px); 
    border-radius: 25px 25px 0 0;
    clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
    z-index: 2;
}

.main-nav-tab-3::after {
    content: 'PROJECTS';
    font-family: montserrat-semibold-italic;
    font-size: 13px;
    color: rgb(73, 0, 0);
    position: absolute;
    left: 335px;
    width: 85px;
    height: 7px;
    top: -18px;
    z-index: 2;
}

.main-nav-tab-4::before {
    content:  '';
    position: absolute;
    top: -18px;
    width: 300px;
    height: 17px;
    left: 390px;
    background: rgb(200,200,200, 0.3);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px); 
    border-radius: 25px 25px 0 0;
    clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
}

.main-nav-tab-4::after {
    content: 'EMPLOYMENT';
    font-family: montserrat-semibold-italic;
    font-size: 13px;
    color: rgb(73, 0, 0);
    position: absolute;
    left: 450px;
    width: 85px;
    height: 7px;
    top: -18px;
}

.main-navigation__inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 30px;
    height: 100%;
    position: relative;
}

.title-group {
    display: flex;
    align-items: baseline; 
    gap: 3px; 
} 

h1 {
    padding-left: -30px;
    padding-top: 10px;
    letter-spacing: 3px;
    font-family: inJob, serif;
    font-weight: bold;
    font-size: 40px;
    color: rgb(73, 0, 0);
}

h2 {  
    letter-spacing: 3px;
    font-family: montserrat-medium;
    font-size: 20px;
    font-weight: normal;
}

.socials-logos-wrapper {
    display: flex;
    gap: 20px;
    align-items: center;
}

.reddit {
    width: 33px;
    height: 40px;
    transition: all 0.3s ease;
    cursor: pointer;
    fill: black;
}

.youtube {
    width: 35px;
    height: 47px;
    transition: all 0.3s ease;
    cursor: pointer;
    fill: black;
}

.github {
    width: 40px;
    height: 50px;
    transition: all 0.3s ease;
    cursor: pointer;
    fill: black;
}

.github:hover, .reddit:hover, .youtube:hover {
    opacity: 0.5;
    transform: translateY(-3px);
}

.profile-header {
    display: flex;
    justify-content: center;
    position: relative;
    margin-top: -3rem;
}

.profile-header__headshot-wrap {
    display: flex;
    justify-content: center;
    margin: auto;
}

.img {
    width: 50%;
}

.profile-header__name-wrap{
    content: 'Colis, Rizza Mae Wagas';
    position: absolute;
    top: 50%; 
    left: 50%;
    transform: translate(-50%, -50%); 
    z-index: -1; 
    width: 100%;
    text-align: center;
    white-space: nowrap;
}

.profile-header__name-wrap h1 {
    color: black; 
    font-family: montserrat-bold; 
    font-size: 10vw; 
    opacity: 0.5; 
}

.main-content {
    width: 95vw;
    margin: 0 auto;
    padding-top: 2rem; 
}

.content-container {
    min-height: 150vh; 
    color: white; 
    font-family: montserrat-medium, sans-serif;
}

